# slide

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
res/: Info.plist  main.rc  slide.desktop  slide.icns
src/: App.cpp  App.h  CMakeLists.txt  Color.cpp  Color.h  Dimenions.cpp  Dimenions.h  Documents.cpp  Documents.h  Encoding.cpp  Encoding.h  Slide.cpp  Slide.h  WCairo.cpp  WCairo.h  app.cc  app.h  base64.cc  base64.h  cairo_wrapper.cc  cairo_wrapper.h  color.cc  color.h  colour_t.cpp  colour_t.h  debug_print.h  dimenions.cpp  dimenions.h  documents.cc  documents.cpp  documents.h  encoding.cc  encoding.cpp  encoding.h  main.cc  main.cpp  slide.cc  slide.cpp  slide.h  slide.hpp  (+9 more)
test/: CMakeLists.txt  slide_test.cc  slide_test.cpp
